Setup base styles

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 	<meta name="keywords" content="">
 	<meta name="description" content="">
 
-	<title>Gulp Frontend Starter</title>
+	<title>Офисная мебель</title>
 
 	<!-- Page favicons -->
 	<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
