--- a/src/404.html
+++ b/src/404.html
@@ -15,7 +15,7 @@
 	<meta name="keywords" content="">
 	<meta name="description" content="">
 
-	<title>Page not found</title>
+	<title>404: Страница не найдена</title>
 
 	<!-- Page favicons -->
 	<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
