--- a/src/index.html
+++ b/src/index.html
@@ -34,15 +34,125 @@
 <body>
 	<div class="wrapper">
 		<header class="header">
-			<!-- Page header -->
+			<div class="header__container container">
+				<div class="header__logo">
+					<a class="site-logo" href="/">Логотип</a>
+				</div>
+				<nav class="header__menu">
+					<ul class="header__menu-list">
+						<li><a class="header__menu-link" href="#">О компании</a></li>
+						<li><a class="header__menu-link" href="#">Направления</a></li>
+						<li><a class="header__menu-link" href="#">Блог</a></li>
+						<li><a class="header__menu-link" href="#">Контакты</a></li>
+						<li><a class="header__menu-link" href="#">Оплата</a></li>
+						<li><a class="header__menu-link" href="#">Доставка</a></li>
+						<li><a class="header__menu-link" href="#">Материалы</a></li>
+					</ul>
+				</nav>
+				<ul class="header__contacts">
+					<li>
+						<svg class="header__contacts-icon">
+							<use href="./assets/icons/icon-phone.svg" />
+						</svg>
+						<a class="header__contacts-link" href="tel:+79120082023">+7 (912) 008-20-26</a>
+					</li>
+					<li>
+						<svg class="header__contacts-icon">
+							<use href="./assets/icons/icon-mail.svg" />
+						</svg>
+						<a class="header__contacts-link" href="mailto:gmail@yandex.com">gmail@yandex.com</a>
+					</li>
+				</ul>
+				<div class="header__callback">
+					<button class="button button--outline">Обратный звонок</button>
+				</div>
+				<div class="header__burger">
+					<button class="burger js-navbar-button" data-navbar-action="open">
+						<span></span>
+						<span></span>
+						<span></span>
+					</button>
+				</div>
+			</div>
 		</header>
+
+		<nav class="navbar js-navbar">
+			<div class="navbar__container container">
+				<div class="navbar__head">
+					<div class="navbar__logo">
+						<a class="site-logo" href="/">Логотип</a>
+					</div>
+					<div class="navbar__burger">
+						<button class="burger js-navbar-button" data-navbar-action="close">
+							<span></span>
+							<span></span>
+							<span></span>
+						</button>
+					</div>
+				</div>
+				<div class=" navbar__body">
+					<div class="navbar__menu">
+						<ul class="navbar__menu-list">
+							<li><a class="navbar__menu-link" href="#">О компании</a></li>
+							<li><a class="navbar__menu-link" href="#">Направления</a></li>
+							<li><a class="navbar__menu-link" href="#">Блог</a></li>
+							<li><a class="navbar__menu-link" href="#">Контакты</a></li>
+							<li><a class="navbar__menu-link" href="#">Оплата</a></li>
+							<li><a class="navbar__menu-link" href="#">Доставка</a></li>
+							<li><a class="navbar__menu-link" href="#">Материалы</a></li>
+						</ul>
+					</div>
+					<div class="navbar__foot">
+						<ul class="navbar__contacts">
+							<li><a class="navbar__contacts-link" href="tel:+79120082023">+7 (912) 008-20-26</a></li>
+							<li><a class="navbar__contacts-link" href="mailto:gmail@yandex.com">gmail@yandex.com</a></li>
+						</ul>
+						<button class="navbar__button-call button button--outline">Обратный звонок</button>
+					</div>
+				</div>
+			</div>
+		</nav>
 
 		<main class="main">
 			<!-- Page content -->
 		</main>
 
 		<footer class="footer">
-			<!-- Page footer -->
+			<div class="footer__container container">
+				<div class="footer__row">
+					<div class="footer__info">
+						<div class="footer__info-logo">
+							<a class="site-logo" href="/">Логотип</a>
+						</div>
+						<p class="footer__info-text">Экологичная <br>офисная мебель на заказ</p>
+					</div>
+					<ul class="footer__menu-list">
+						<li><a class="footer__menu-link" href="#">О компании</a></li>
+						<li><a class="footer__menu-link" href="#">Направления</a></li>
+						<li><a class="footer__menu-link" href="#">Блог</a></li>
+						<li><a class="footer__menu-link" href="#">Контакты</a></li>
+						<li><a class="footer__menu-link" href="#">Оплата</a></li>
+						<li><a class="footer__menu-link" href="#">Доставка</a></li>
+						<li><a class="footer__menu-link" href="#">Материалы</a></li>
+					</ul>
+				</div>
+				<div class="footer__row">
+					<ul class="footer__contacts">
+						<li>
+							<address class="footer__contacts-address">Монетчиковский пер., 79, Москва</address>
+						</li>
+						<li><a class="footer__contacts-link" href="tel:+79120082023">+7 (912) 008-20-26</a></li>
+						<li><a class="footer__contacts-link" href="mailto:gmail@yandex.com">gmail@yandex.com</a></li>
+					</ul>
+				</div>
+				<div class="footer__row">
+					<div class="footer__links">
+						<a class="footer__link" href="#">Политика конфиденциальности</a>
+						<a class="footer__link" href="#">Персональные данные</a>
+					</div>
+					<a class="footer__developer" href="https://goweb.pro">Made by Goweb.Pro</a>
+				</div>
+			</div>
 		</footer>
 	</div>
 </body>
