--- a/src/about.html
+++ b/src/about.html
@@ -15,7 +15,7 @@
 	<meta name="keywords" content="">
 	<meta name="description" content="">
 
-	<title>Офисная мебель</title>
+	<title>О компании</title>
 
 	<!-- Page favicons -->
 	<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
@@ -113,73 +113,64 @@
 			</div>
 		</nav>
 
+		<ul class="bread-crumbs container">
+			<li><a href="/">Главная</a></li>
+			<li>О компании</li>
+		</ul>
+
 		<main class="main">
-			<!-- Главная -->
-			<section class="hero-section">
-				<picture class="hero-section__picture">
-					<img src="./assets/images/hero-image.jpg" alt="Группа рабочих">
-				</picture>
-				<div class="hero-section__container container">
-					<div class="hero-section__content">
-						<h1 class="hero-section__heading heading-1">
-							Изготовление <br>
-							торговой и офисной <br>
-							мебели
-						</h1>
-						<ul class="hero-section__list">
-							<li>Собственное производство</li>
-							<li>10 лет гарантия</li>
-							<li>Лидеры по скорости и качеству сборки</li>
-						</ul>
-						<a class="hero-section__button button" href="#">оформить заказ</a>
+			<!-- О компании -->
+			<section class="about-section">
+				<div class="about-section__container container">
+					<div class="about-section__head">
+						<h1 class="about-section__heading heading-1">О компании</h1>
+					</div>
+					<div class="about-section__body">
+						<div class="about-section__item">
+							<img class="about-section__item-image" src="./assets/images/about-1.jpg" alt="">
+							<div class="about-section__item-content">
+								<h2 class="heading-3">Наша задача</h2>
+								<p>
+									С момента основания в 2005 году наша компания ориентируется на высокие стандарты качества продукции и индивидуальный подход к каждому клиенту. В
+									нашем ассортименте представлены как готовые решения, так и возможность создания мебели по индивидуальным проектам, что позволяет нам
+									удовлетворять самые разнообразные потребности наших клиентов.
+								</p>
+								<h2 class="heading-3">мы - команда</h2>
+								<p>
+									С момента основания в 2005 году наша компания ориентируется на высокие стандарты качества продукции и индивидуальный подход к каждому клиенту. В
+									нашем ассортименте представлены как готовые решения, так и возможность создания мебели по индивидуальным проектам, что позволяет нам
+									удовлетворять самые разнообразные потребности наших клиентов.
+								</p>
+								<button class="button">оформить заказ</button>
+							</div>
+						</div>
+						<div class="about-section__item about-section__item--revers">
+							<img class="about-section__item-image" src="assets/images/about-2.jpg" alt="">
+							<div class="about-section__item-content">
+								<h2 class="heading-3">наше производство</h2>
+								<p>
+									С момента основания в 2005 году наша компания ориентируется на высокие стандарты качества продукции и индивидуальный подход к каждому клиенту. В
+									нашем ассортименте представлены как готовые решения, так и возможность создания мебели по индивидуальным проектам, что позволяет нам
+									удовлетворять самые разнообразные потребности наших клиентов.
+								</p>
+								<h2 class="heading-3">мы - за качество</h2>
+								<p>
+									С момента основания в 2005 году наша компания ориентируется на высокие стандарты качества продукции и индивидуальный подход к каждому клиенту. В
+									нашем ассортименте представлены как готовые решения, так и возможность создания мебели по индивидуальным проектам, что позволяет нам
+									удовлетворять самые разнообразные потребности наших клиентов.
+								</p>
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
 
-			<!-- Услуги -->
-			<section class="services-section splide" data-slider="services">
-				<div class="services-section__container container">
-					<h2 class="services-section__heading heading-2">Услуги</h2>
-					<div class="services-section__slider">
-						<div class="services-section__body splide__track">
-							<ul class="services-section__list splide__list">
-								<li class="services-section__slide splide__slide">
-									<div class="service-card">
-										<a class="service-card__image-link" href="#">
-											<img class="service-card__image" src="./assets/images/service-image-1.jpg" alt="">
-										</a>
-										<a class="service-card__heading heading-4" href="#">Изготовление торговой мебели</a>
-										<ul class="service-card__tags">
-											<li>Магазин</li>
-											<li>Торговый павильон</li>
-											<li>Торговый островок</li>
-											<li>Медицина</li>
-											<li>Развлечение</li>
-											<li>Спорт</li>
-											<li>Образование</li>
-											<li>Стационарная</li>
-										</ul>
-									</div>
-								</li>
-								<li class="services-section__slide splide__slide">
-									<div class="service-card">
-										<a class="service-card__image-link" href="#">
-											<img class="service-card__image" src="./assets/images/service-image-2.jpg" alt="">
-										</a>
-										<a class="service-card__heading heading-4" href="#">Изготовление офисной мебели</a>
-										<ul class="service-card__tags">
-											<li>Кабинет руководителя</li>
-											<li>Бухгалтерия</li>
-											<li>Отдел продаж</li>
-											<li>Комната отдыха</li>
-											<li>Коворкинг</li>
-											<li>Ресепшн</li>
-										</ul>
-									</div>
-								</li>
-							</ul>
-						</div>
-						<div class="services-section__buttons splide__arrows">
+			<!-- Команда -->
+			<section class="team-section splide" data-slider="team">
+				<div class="team-section__container container">
+					<div class="team-section__head">
+						<h2 class="team-section__heading heading-2">Наша команда</h2>
+						<div class="team-section__buttons splide__arrows">
 							<button class="slider-button splide__arrow splide__arrow--prev">
 								<svg class="slider-button__icon">
 									<use href="./assets/icons/icon-chevron-left.svg" />
@@ -192,97 +183,92 @@
 							</button>
 						</div>
 					</div>
+					<div class="team-section__body splide__track">
+						<div class="team-section__list splide__list">
+							<div class="team-section__slide splide__slide">
+								<img class="team-section__image" src="./assets/images/team-1.jpg" alt="">
+								<p class="team-section__name heading-4">Иван турбинин</p>
+								<p class="team-section__role">Высшая должность</p>
+							</div>
+							<div class="team-section__slide splide__slide">
+								<img class="team-section__image" src="./assets/images/team-2.jpg" alt="">
+								<p class="team-section__name heading-4">Алексей Чикалов</p>
+								<p class="team-section__role">Высшая должность</p>
+							</div>
+							<div class="team-section__slide splide__slide">
+								<img class="team-section__image" src="./assets/images/team-3.jpg" alt="">
+								<p class="team-section__name heading-4">Арсений фолин</p>
+								<p class="team-section__role">Высшая должность</p>
+							</div>
+							<div class="team-section__slide splide__slide">
+								<img class="team-section__image" src="./assets/images/team-4.jpg" alt="">
+								<p class="team-section__name heading-4">дмитрий иванов</p>
+								<p class="team-section__role">Высшая должность</p>
+							</div>
+							<div class="team-section__slide splide__slide">
+								<img class="team-section__image" src="./assets/images/team-5.jpg" alt="">
+								<p class="team-section__name heading-4">павел дидищев</p>
+								<p class="team-section__role">Высшая должность</p>
+							</div>
+						</div>
+					</div>
 				</div>
 			</section>
 
-			<!-- Направления -->
-			<section class="directions-section splide" data-slider="directions">
-				<div class="directions-section__container container">
-					<div class="directions-section__head">
-						<h2 class="directions-section__heading heading-2">Направления</h2>
-						<div class="directions-section__buttons splide__arrows">
-							<button class="slider-button splide__arrow splide__arrow--prev">
-								<svg class="slider-button__icon">
-									<use href="./assets/icons/icon-chevron-left.svg" />
-								</svg>
-							</button>
-							<button class="slider-button splide__arrow splide__arrow--next">
-								<svg class="slider-button__icon">
-									<use href="./assets/icons/icon-chevron-right.svg" />
-								</svg>
-							</button>
-						</div>
+			<!-- Галерея -->
+			<section class="gallery-section">
+				<div class="gallery-section__container container">
+					<div class="gallery-section__head">
+						<h1 class="gallery-section__heading heading-2">галерея производства</h1>
+						<p class="gallery-section__description">
+							С момента основания в 2005 году наша компания ориентируется на высокие стандарты качества продукции и индивидуальный подход к каждому клиенту.
+						</p>
+						<button class="gallery-section__button button">Оформить заказ</button>
 					</div>
-					<div class="directions-section__body splide__track">
-						<div class="directions-section__grid splide__list">
-							<div class="directions-section__slide direction-card splide__slide">
-								<div class="direction-card__body">
-									<h3 class="direction-card__heading heading-4">Магазин</h3>
-									<p>
-										Продуктовый магазин, алкомаркет, пиво, одежда, обувь, аксессуары, игрушки, техника, телефоны, инструменты, бакалея, табак, пекарня,
-										свадебный салон
-									</p>
-								</div>
-								<img class="direction-card__image" src="./assets/images/direction-1.png" alt="">
-							</div>
-							<div class="directions-section__slide direction-card splide__slide">
-								<div class="direction-card__body">
-									<h3 class="direction-card__heading heading-4">Торговый павильон</h3>
-									<p>Кофейня, аксессуары, фаст-фуд, пекарня, телефоны, сладости.</p>
-								</div>
-								<img class="direction-card__image" src="./assets/images/direction-2.png" alt="">
-							</div>
-							<div class="directions-section__slide direction-card splide__slide">
-								<div class="direction-card__body">
-									<h3 class="direction-card__heading heading-4">Торговый островок</h3>
-									<p>Кофейня, аксессуары, фаст-фуд, пекарня, телефоны, сладости, нейл бар, броу бар</p>
-								</div>
-								<img class="direction-card__image" src="./assets/images/direction-3.png" alt="">
-							</div>
-							<div class="directions-section__slide direction-card splide__slide">
-								<div class="direction-card__body">
-									<h3 class="direction-card__heading heading-4">Медицина</h3>
-									<p>Стоматология, частная клиника, медицинская лаборатория (анализы).</p>
-								</div>
-								<img class="direction-card__image" src="./assets/images/direction-4.png" alt="">
-							</div>
-							<div class="directions-section__slide direction-card splide__slide">
-								<div class="direction-card__body">
-									<h3 class="direction-card__heading heading-4">Развлечение</h3>
-									<p>Кафе, бар, ресторан</p>
-								</div>
-								<img class="direction-card__image" src="./assets/images/direction-5.png" alt="">
-							</div>
-							<div class="directions-section__slide direction-card splide__slide">
-								<div class="direction-card__body">
-									<h3 class="direction-card__heading heading-4">Спорт</h3>
-									<p>Фитнес центры, йога, пилатес, спортивные секции</p>
-								</div>
-								<img class="direction-card__image" src="./assets/images/direction-6.png" alt="">
-							</div>
-							<div class="directions-section__slide direction-card splide__slide">
-								<div class="direction-card__body">
-									<h3 class="direction-card__heading heading-4">Образование</h3>
-									<p>Частный детский сад, частная школа, школа развития, школа иностранных языков</p>
-								</div>
-								<img class="direction-card__image" src="./assets/images/direction-7.png" alt="">
-							</div>
-							<div class="directions-section__slide direction-card splide__slide">
-								<div class="direction-card__body">
-									<h3 class="direction-card__heading heading-4">Стационарная</h3>
-									<p>Кофейня самообслуживания, услуги операторов сотовой связи, рекламные акции</p>
-								</div>
-								<img class="direction-card__image" src="./assets/images/direction-8.png" alt="">
-							</div>
-							<div class="directions-section__slide direction-card splide__slide">
-								<div class="direction-card__body">
-									<h3 class="direction-card__heading heading-4">Изготовление офисной мебели</h3>
-									<p>Кабинет руководителя, Бухгалтерия, Отдел продаж, Комната отдыха, Коворкинг, Ресепшн</p>
-								</div>
-								<img class="direction-card__image" src="./assets/images/direction-9.png" alt="">
-							</div>
-						</div>
+					<div class="gallery-section__grid">
+						<a class="gallery-section__item" data-fancybox="about-gallery" href="./assets/images/about-gallery-1.jpg">
+							<img class="gallery-section__image" src="./assets/images/about-gallery-1.jpg" />
+						</a>
+						<a class="gallery-section__item" data-fancybox="about-gallery" href="./assets/images/about-gallery-2.jpg">
+							<img class="gallery-section__image" src="./assets/images/about-gallery-2.jpg" />
+						</a>
+						<a class="gallery-section__item" data-fancybox="about-gallery" href="./assets/images/about-gallery-3.jpg">
+							<img class="gallery-section__image" src="./assets/images/about-gallery-3.jpg" />
+						</a>
+						<a class="gallery-section__item" data-fancybox="about-gallery" href="./assets/images/about-gallery-4.jpg">
+							<img class="gallery-section__image" src="./assets/images/about-gallery-4.jpg" />
+						</a>
+						<a class="gallery-section__item" data-fancybox="about-gallery" href="./assets/images/about-gallery-5.jpg">
+							<img class="gallery-section__image" src="./assets/images/about-gallery-5.jpg" />
+						</a>
+						<a class="gallery-section__item" data-fancybox="about-gallery" href="./assets/images/about-gallery-6.jpg">
+							<img class="gallery-section__image" src="./assets/images/about-gallery-6.jpg" />
+						</a>
+						<a class="gallery-section__item" data-fancybox="about-gallery" href="./assets/images/about-gallery-7.jpg">
+							<img class="gallery-section__image" src="./assets/images/about-gallery-7.jpg" />
+						</a>
+						<a class="gallery-section__item" data-fancybox="about-gallery" href="./assets/images/about-gallery-8.jpg">
+							<img class="gallery-section__image" src="./assets/images/about-gallery-8.jpg" />
+						</a>
 					</div>
+				</div>
+			</section>
+
+			<!-- Форма обратной связи -->
+			<section class="callback-section">
+				<div class="callback-section__container container">
+					<form class="callback-section__form callback-form" action="#">
+						<h2 class="callback-form__heading heading-3">Получите экологичную офисную мебель всего за 10 дней</h2>
+						<p class="callback-form__description">
+							Мы используем только сертифицированные материалы и инновационные технологии, чтобы создать идеальное рабочее пространство для вашего бизнеса.
+						</p>
+						<div class="callback-form__body">
+							<input class="callback-form__input input" type="text" name="name" placeholder="Введите имя" required>
+							<input class="callback-form__input input" type="tel" name="phone" placeholder="Введите телефон" required>
+							<button class="callback-form__button button" type="submit">Отправить заявку</button>
+						</div>
+						<p class="callback-form__agreement">Оставляя заявку, вы соглашаетесь на <a href="#">обработку персональных данных</a></p>
+					</form>
 				</div>
 			</section>
 
@@ -376,77 +362,6 @@
 					</div>
 				</div>
 			</section>
-
-			<!-- Этапы работ -->
-			<section class="stages-section">
-				<div class="stages-section__container container">
-					<div class="stages-section__head">
-						<h2 class="stages-section__header heading-2">Этапы работ</h2>
-					</div>
-					<div class="stages-section__grid">
-						<div class="stages-section__card stage-card">
-							<img class="stage-card__image" src="./assets/images/stage-1.jpg" alt="">
-							<div class="stage-card__body">
-								<span class="stage-card__number">1</span>
-								<h3 class="stage-card__heading heading-4">замер</h3>
-								<p class="stage-card__description">В течении дня МСК и МО</p>
-							</div>
-						</div>
-						<div class="stages-section__card stage-card">
-							<img class="stage-card__image" src="./assets/images/stage-2.jpg" alt="">
-							<div class="stage-card__body">
-								<span class="stage-card__number">2</span>
-								<h3 class="stage-card__heading heading-4">дизайн/проект</h3>
-								<p class="stage-card__description">1 день</p>
-							</div>
-						</div>
-						<div class="stages-section__card stage-card">
-							<img class="stage-card__image" src="./assets/images/stage-3.jpg" alt="">
-							<div class="stage-card__body">
-								<span class="stage-card__number">3</span>
-								<h3 class="stage-card__heading heading-4">производство</h3>
-								<p class="stage-card__description">15 рабочих дней</p>
-							</div>
-						</div>
-						<div class="stages-section__card stage-card">
-							<img class="stage-card__image" src="./assets/images/stage-4.jpg" alt="">
-							<div class="stage-card__body">
-								<span class="stage-card__number">4</span>
-								<h3 class="stage-card__heading heading-4">доставка</h3>
-								<p class="stage-card__description">В течении 1 дня</p>
-							</div>
-						</div>
-						<div class="stages-section__card stage-card">
-							<img class="stage-card__image" src="./assets/images/stage-5.jpg" alt="">
-							<div class="stage-card__body">
-								<span class="stage-card__number">5</span>
-								<h3 class="stage-card__heading heading-4">монтаж</h3>
-								<p class="stage-card__description">От 1 - 3 дней</p>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
-
-			<!-- Форма обратной связи -->
-			<section class="callback-section">
-				<div class="callback-section__container container">
-					<form class="callback-section__form callback-form" action="#">
-						<h2 class="callback-form__heading heading-3">Получите экологичную офисную мебель всего за 10 дней</h2>
-						<p class="callback-form__description">
-							Мы используем только сертифицированные материалы и инновационные технологии, чтобы создать идеальное рабочее пространство для вашего бизнеса.
-						</p>
-						<div class="callback-form__body">
-							<input class="callback-form__input input" type="text" name="name" placeholder="Введите имя" required>
-							<input class="callback-form__input input" type="tel" name="phone" placeholder="Введите телефон" required>
-							<button class="callback-form__button button" type="submit">Отправить заявку</button>
-						</div>
-						<p class="callback-form__agreement">Оставляя заявку, вы соглашаетесь на <a href="#">обработку персональных данных</a></p>
-					</form>
-				</div>
-			</section>
-
-			<!-- Партнеры -->
 
 			<!-- Отзывы -->
 			<section class="reviews-section splide" data-slider="reviews">
