Create blog, blog-single and directions-single page

--- a/src/about.html
+++ b/src/about.html
@@ -129,36 +129,40 @@
 						<div class="about-section__item">
 							<img class="about-section__item-image" src="./assets/images/about-1.jpg" alt="">
 							<div class="about-section__item-content">
-								<h2 class="heading-3">Наша задача</h2>
-								<p>
-									С момента основания в 2005 году наша компания ориентируется на высокие стандарты качества продукции и индивидуальный подход к каждому клиенту. В
-									нашем ассортименте представлены как готовые решения, так и возможность создания мебели по индивидуальным проектам, что позволяет нам
-									удовлетворять самые разнообразные потребности наших клиентов.
-								</p>
-								<h2 class="heading-3">мы - команда</h2>
-								<p>
-									С момента основания в 2005 году наша компания ориентируется на высокие стандарты качества продукции и индивидуальный подход к каждому клиенту. В
-									нашем ассортименте представлены как готовые решения, так и возможность создания мебели по индивидуальным проектам, что позволяет нам
-									удовлетворять самые разнообразные потребности наших клиентов.
-								</p>
+								<div class="about-section__item-content-text">
+									<h3>Наша задача</h3>
+									<p>
+										С момента основания в 2005 году наша компания ориентируется на высокие стандарты качества продукции и индивидуальный подход к каждому
+										клиенту. В нашем ассортименте представлены как готовые решения, так и возможность создания мебели по индивидуальным проектам, что позволяет
+										нам удовлетворять самые разнообразные потребности наших клиентов.
+									</p>
+									<h3>мы - команда</h3>
+									<p>
+										С момента основания в 2005 году наша компания ориентируется на высокие стандарты качества продукции и индивидуальный подход к каждому
+										клиенту. В нашем ассортименте представлены как готовые решения, так и возможность создания мебели по индивидуальным проектам, что позволяет
+										нам удовлетворять самые разнообразные потребности наших клиентов.
+									</p>
+								</div>
 								<button class="button">оформить заказ</button>
 							</div>
 						</div>
 						<div class="about-section__item about-section__item--revers">
 							<img class="about-section__item-image" src="assets/images/about-2.jpg" alt="">
 							<div class="about-section__item-content">
-								<h2 class="heading-3">наше производство</h2>
-								<p>
-									С момента основания в 2005 году наша компания ориентируется на высокие стандарты качества продукции и индивидуальный подход к каждому клиенту. В
-									нашем ассортименте представлены как готовые решения, так и возможность создания мебели по индивидуальным проектам, что позволяет нам
-									удовлетворять самые разнообразные потребности наших клиентов.
-								</p>
-								<h2 class="heading-3">мы - за качество</h2>
-								<p>
-									С момента основания в 2005 году наша компания ориентируется на высокие стандарты качества продукции и индивидуальный подход к каждому клиенту. В
-									нашем ассортименте представлены как готовые решения, так и возможность создания мебели по индивидуальным проектам, что позволяет нам
-									удовлетворять самые разнообразные потребности наших клиентов.
-								</p>
+								<div class="about-section__item-content-text">
+									<h3>наше производство</h3>
+									<p>
+										С момента основания в 2005 году наша компания ориентируется на высокие стандарты качества продукции и индивидуальный подход к каждому
+										клиенту. В нашем ассортименте представлены как готовые решения, так и возможность создания мебели по индивидуальным проектам, что позволяет
+										нам удовлетворять самые разнообразные потребности наших клиентов.
+									</p>
+									<h3>мы - за качество</h3>
+									<p>
+										С момента основания в 2005 году наша компания ориентируется на высокие стандарты качества продукции и индивидуальный подход к каждому
+										клиенту. В нашем ассортименте представлены как готовые решения, так и возможность создания мебели по индивидуальным проектам, что позволяет
+										нам удовлетворять самые разнообразные потребности наших клиентов.
+									</p>
+								</div>
 							</div>
 						</div>
 					</div>
